--- a/app/src/main/res/layout/fragment_buyer_seller_enq_item.xml
+++ b/app/src/main/res/layout/fragment_buyer_seller_enq_item.xml
@@ -17,16 +17,27 @@
             android:clickable="true"
             android:orientation="vertical"
             android:padding="10dp">
-
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
             <TextView
                 android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_toLeftOf="@+id/cur_statusIcon"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:text="ACETONE "
                 android:textColor="@color/textColorPrimary"
                 android:textSize="16sp" />
+                <ImageView
+                    android:id="@+id/cur_statusIcon"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginRight="10dp"/>
+            </RelativeLayout>
 
             <LinearLayout
                 android:id="@+id/layout_users"
