Tushar: changes in splash screen, login screen, logo

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -14,12 +14,15 @@
         android:orientation="vertical"
         android:weightSum="2">
 
+
+
+
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
-                android:scaleType="fitXY"
-                android:src="@drawable/login_img" />
+                android:scaleType="centerInside"
+                android:src="@drawable/broker2" />
 
         <ScrollView
             android:id="@+id/login_form"
