--- a/app/src/main/res/layout/content_view_history.xml
+++ b/app/src/main/res/layout/content_view_history.xml
@@ -24,7 +24,8 @@
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
         android:layout_below="@+id/top_lable"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="5dp">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recycler_view"
