--- a/app/src/main/res/layout/content_my_history.xml
+++ b/app/src/main/res/layout/content_my_history.xml
@@ -21,22 +21,23 @@
             android:background="@color/white"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/left10"
-                android:layout_marginTop="5dp"
-                android:text="Select Date Range"
-                android:textColor="@color/black"
-                android:textSize="20sp"
-                android:textStyle="bold" />
+
 
             <LinearLayout
+                android:id="@+id/date_range_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:orientation="vertical">
-
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/left10"
+                    android:layout_marginTop="5dp"
+                    android:text="Select Date Range"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -126,7 +127,36 @@
                     android:textColor="@color/white"
                     android:textSize="16sp" />
             </LinearLayout>
-
+        <LinearLayout
+            android:id="@+id/total_amount_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal"
+            android:visibility="gone">
+            <TextView
+                android:id="@+id/lbl_total_amount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/left10"
+                android:layout_marginTop="5dp"
+                android:layout_gravity="left"
+                android:text="Total Amount"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/total_amount_value"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/left10"
+                android:layout_marginTop="5dp"
+                android:gravity="right"
+                android:text="Rs. 20000/-"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+            </LinearLayout>
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/history_recycler_view"
                 android:layout_width="match_parent"
