--- a/app/src/main/res/layout/content_add_enquiry_step_three.xml
+++ b/app/src/main/res/layout/content_add_enquiry_step_three.xml
@@ -70,7 +70,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:weightSum="2">
+                    android:weightSum="2"
+                    android:visibility="gone">
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="0dp"
@@ -109,7 +110,8 @@
                 <RadioGroup
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:visibility="gone">
 
                     <RadioButton
                         android:id="@+id/radio_excise_inclusive"
@@ -153,11 +155,13 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:weightSum="2">
 
 
                     <android.support.design.widget.TextInputLayout
-                        android:layout_width="match_parent"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="3dp">
 
@@ -165,13 +169,20 @@
                             android:id="@+id/edit_tax_perc"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="Taxes (% on basic price)"
+                            android:hint="GST (in %)"
                             android:inputType="numberDecimal"
                             android:maxLines="1"
                             android:paddingLeft="5dp"
                             android:singleLine="true" />
 
                     </android.support.design.widget.TextInputLayout>
+                    <Spinner
+                        android:id="@+id/spinner_gst_type"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="0.7"
+                        android:entries="@array/gst_type"></Spinner>
 
 
                 </LinearLayout>
