--- a/app/src/main/res/menu/activity_broker_home_drawer.xml
+++ b/app/src/main/res/menu/activity_broker_home_drawer.xml
@@ -10,10 +10,10 @@
             android:id="@+id/nav_my_circle"
             android:icon="@drawable/my_circle"
             android:title="My Circle" />
-        <item
+        <!--<item
             android:id="@+id/nav_pending_enquiries"
             android:icon="@drawable/ic_bookmark_black"
-            android:title="Pending Enquiries" />
+            android:title="Pending Enquiries" />-->
         <item
             android:id="@+id/nav_history"
             android:icon="@drawable/history"
