--- a/app/src/main/res/menu/menu_buyer_seller_home.xml
+++ b/app/src/main/res/menu/menu_buyer_seller_home.xml
@@ -24,11 +24,11 @@
         android:title="Chats"
         app:showAsAction="always">
         <menu>
-            <item
+            <!--<item
                 android:id="@+id/action_profile"
                 android:icon="@drawable/ic_account_box_black_24dp"
                 android:orderInCategory="100"
-                android:title="My Profile" />
+                android:title="My Profile" />-->
             <item
                 android:id="@+id/action_logout"
                 android:icon="@drawable/ic_logout"
