--- a/app/src/main/res/layout/content_add_enquiry_step_three.xml
+++ b/app/src/main/res/layout/content_add_enquiry_step_three.xml
@@ -154,16 +154,39 @@
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="40dp"
                     android:orientation="horizontal"
                     android:weightSum="2">
 
+                    <Spinner
+                        android:id="@+id/spinner_gst_perc"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1.3"
+                        android:entries="@array/gst_perc"></Spinner>
+
+                    <Spinner
+                        android:id="@+id/spinner_gst_type"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="0.7"
+                        android:entries="@array/gst_type"></Spinner>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/layout_gst_perc"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone">
 
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="0dp"
-                        android:layout_weight="1"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="3dp">
+                        android:layout_marginTop="3dp"
+                        android:layout_weight="1">
 
                         <EditText
                             android:id="@+id/edit_tax_perc"
@@ -176,17 +199,7 @@
                             android:singleLine="true" />
 
                     </android.support.design.widget.TextInputLayout>
-                    <Spinner
-                        android:id="@+id/spinner_gst_type"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_weight="0.7"
-                        android:entries="@array/gst_type"></Spinner>
-
-
                 </LinearLayout>
-
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
