--- a/app/src/main/res/layout/content_enquiry_details.xml
+++ b/app/src/main/res/layout/content_enquiry_details.xml
@@ -954,6 +954,18 @@
                     android:background="#9c9b9c"
                     android:visibility="gone"/>
 
+                <android.support.v7.widget.AppCompatButton
+                    android:id="@+id/btn_delete"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginRight="15dp"
+                    android:textColor="@color/white"
+                    android:background="@drawable/app_btn"
+                    android:text="Delete This Deal"
+                    android:visibility="gone"/>
+
                 <LinearLayout
                     android:id="@+id/btn_reopen"
                     android:layout_width="match_parent"
